change name to rst_bootstrap

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bootstrap
+name: rst_bootstrap
 description: A bootstrap latest SCSS based bootstrap css framework
 version: 4.2.1
 author: David Zhao <david.zhao@resentek.com>
